--- a/public/Assets/flowBudgetStyles/flowBudget.css
+++ b/public/Assets/flowBudgetStyles/flowBudget.css
@@ -185,6 +185,7 @@
 
 .budgetset-button {
 }
+
 .budgetset-close-button {
 	position: absolute;
   right: 4px;
@@ -204,9 +205,31 @@
   background: #f00;
 }
 
+/** floating buttons **/
+.float-button {
+	border-radius: 100%;
+	box-shadow : grey 1px 1px 10px 1px;
+	display : flex;
+	justify-content: center;
+	align-items:center;
+	position : fixed;
+	right : 10px;
+	bottom : 50px;
+	background : #0856d5;
+	color : #ffffff;
+	border:none;
+	transition:.1s;
+}
+.float-button:hover {
+	box-shadow: grey 1px 1px 40px 1px;
+}
+
+
 
 /*********************************** UTILITARIANS **/
 .hide { display:none; }
 .show { display:block; }
 
+.button-big { width : 100px; height : 100px;}
+.button-small { width : 50px; height : 50px; }
 
